tests/rosetta/transpiler/Pascal/arena-storage-pool.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/arena-storage-pool.pas
arena-storage-pool.pas(49,31) Error: Identifier not found "p"
arena-storage-pool.pas(130) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
